force-app/main/default/objects/Slot_Change__c/Slot_Change__c.object-meta.xml
<CustomObject>
    <label>Slot Change</label>
    <nameField>
        <label>Slot Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slot Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>