force-app/main/default/objects/Slot_Change__c/fields/NewDriver__c.field-meta.xml
<CustomField>
    <fullName>NewDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NewDriver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Slot Changes (NewDriver)</relationshipLabel>
    <relationshipName>Slot_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>