force-app/main/default/objects/Slot_Change__c/fields/NewTractor__c.field-meta.xml
<CustomField>
    <fullName>NewTractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NewTractor</label>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipLabel>Slot Changes (NewTractor)</relationshipLabel>
    <relationshipName>Slot_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>