force-app/main/default/objects/Slot_Change__c/fields/NewTrailer__c.field-meta.xml
<CustomField>
    <fullName>NewTrailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NewTrailer</label>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipLabel>Slot Changes (NewTrailer)</relationshipLabel>
    <relationshipName>Slot_Changes2</relationshipName>
    <type>Lookup</type>
</CustomField>