force-app/main/default/objects/Slot_Change__c/fields/OldDriver__c.field-meta.xml
<CustomField>
    <fullName>OldDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldDriver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Slot Changes</relationshipLabel>
    <relationshipName>Slot_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>