force-app/main/default/objects/Slot_Change__c/fields/OldTractor__c.field-meta.xml
<CustomField>
    <fullName>OldTractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldTractor</label>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipLabel>Slot Changes</relationshipLabel>
    <relationshipName>Slot_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>