force-app/main/default/objects/Slot_Change__c/fields/OldTrailer__c.field-meta.xml
<CustomField>
    <fullName>OldTrailer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OldTrailer</label>
    <referenceTo>ScrapTruck__c</referenceTo>
    <relationshipLabel>Slot Changes (OldTrailer)</relationshipLabel>
    <relationshipName>Slot_Changes3</relationshipName>
    <type>Lookup</type>
</CustomField>