force-app/main/default/objects/Slot_Change__c/fields/Slot__c.field-meta.xml
<CustomField>
    <fullName>Slot__c</fullName>
    <label>Scrap Slot</label>
    <referenceTo>ScrapSlotReserve__c</referenceTo>
    <relationshipLabel>Slot Changes</relationshipLabel>
    <relationshipName>Slot_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>